# chi_square

./: .gitignore  README.md  chi_square_calculator.py  genetics1003.py  pyproject.toml
.github/: PYPI_PUBLISH_GUIDE.md
.github/workflows/: publish-to-pypi.yml
