[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetics1003"
version = "2.1.1"
description = "Chi-Square Calculator for Genetics and Statistics (Goodness-of-Fit, Contingency Tables, Hardy-Weinberg)"
readme = "README.md"
authors = [
    {name = "wangblog0", email = "your-email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
]
keywords = ["chi-square", "statistics", "genetics", "hardy-weinberg", "contingency-table", "goodness-of-fit"]

[project.urls]
Homepage = "https://github.com/wangblog0/chi_square"
Repository = "https://github.com/wangblog0/chi_square"
Issues = "https://github.com/wangblog0/chi_square/issues"

[project.scripts]
genetics1003 = "genetics1003:main"

[tool.setuptools]
py-modules = ["genetics1003"]
